# Scratch

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/io/: FileHandler.cpp  FileHandler.h  File_Handler.cpp  File_Handler.h  IOHandler.cpp  IOHandler.h
src/io/format/: TextDocument.cpp  TextDocument.h  Text_Document.cpp  Text_Document.h
src/utils/: Log.cpp  Log.h
